SERVER-22970 fix update race with background index build

There are two distinct fixes that must be done together:

- SERVER-23807: update should throw write conflict on unindex
- SERVER-18844: background index builds should reacquire the snapshot to
                properly detect write conflicts with concurrent updates